# stedsans

./: .flake8  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
notebooks/: geopy.ipynb  stedsans_demo.ipynb  xml_to_py.ipynb
src/stedsans/: __init__.py  stedsans.py
src/stedsans/data/: KOMMUNE.dbf  KOMMUNE.shx  aarhus_example.txt  jylland_example.txt  load_data.py
src/stedsans/geography/: geography.py
src/stedsans/nlp/ner/: download_models.py  entity_extractor.py  model.py  predict.py
src/stedsans/utils/: core.py  geo_utils.py  nlp_utils.py
tests/: test_entity_extractor.py  test_geography_class.py  test_stedsans.py
