[metadata]
name = stedsans
version = 0.0.11
author = Malte Højmark-Bertelsen, Jakob Grøhn Damgaard
author_email = hjb@kmd.dk, bokajgd@gmail.com
description = stedsans is a package capable of doing geospatial analyses from text.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maltehb/stedsans
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages=find:
package_dir=
    =src
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src